fixed jumping pagination

--- a/src/about.css
+++ b/src/about.css
@@ -14,3 +14,7 @@
   align-items: center;
   justify-content: center
 }
+
+.movieSearch .card {
+  height: 500px;
+}
